--- a/app/src/main/res/values/google_maps_api.xml
+++ b/app/src/main/res/values/google_maps_api.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDiyiYVY5V6anvwAKTCMkc2v8Z6ykLsCSo</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">YOUR API KEY</string>
 </resources>
